(library
    (name test_z_power)
    (modules test_z_power)
    (libraries alcotest test_tools z_power zarith))

(library
    (name test_z_test_primes)
    (modules test_z_test_primes)
    (libraries alcotest test_tools z_test_primes zarith))

(library
    (name test_z_generate_primes)
    (modules test_z_generate_primes)
    (libraries alcotest test_tools z_test_primes z_generate_primes zarith))

(library
    (name test_z_encoding_msg)
    (modules test_z_encoding_msg)
    (libraries alcotest test_tools z_encoding_msg zarith))

(library
    (name test_z_ciphers)
    (modules test_z_ciphers)
    (libraries alcotest test_tools z_ciphers zarith))

(library
    (name test_z_break_ciphers)
    (modules test_z_break_ciphers)
    (libraries alcotest test_tools z_break_ciphers zarith))

(test
	(name run_tests)
	(modules run_tests)
	(libraries alcotest junit junit_alcotest
	 test_z_power test_z_test_primes
    	 test_z_generate_primes test_z_encoding_msg
    	 test_z_ciphers test_z_break_ciphers)
	 (action (run %{test} --color=always)))

(env
  (dev
    (flags (:standard -g -w -27-33-32-39)))
  (release
    (flags (:standard -O3))))
